# rustylogviewer

./: .gitignore  Cargo.toml  DEVELOPMENT_PLAN.md  PROGRESS.md  README.md  logtrak.toml.example  run-release.sh  rustylogviewer.toml.example
src/: cli.rs  config.rs  formatting.rs  gui.rs  lib.rs  line_rules.rs  main.rs  ui.rs  watcher.rs
tests/: watcher_flow.rs
tests/logs/: README.md  syslog  syslog.1
