[package]
name = "rustylogviewer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"
