[package]
name = "logtrak"
version = "0.1.0"
edition = "2024"
default-run = "logtrak"
autobins = false

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
eframe = "0.33"
ratatui = "0.29"
regex = "1.11"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "local-offset"] }
toml = "0.8"

[dev-dependencies]
tempfile = "3.10"

[[bin]]
name = "logtrak"
path = "src/bin/logtrak-gui.rs"

[[bin]]
name = "logtrak-cli"
path = "src/main.rs"
